<feat> update doc swagger and create annotations and schemas of HomeController
